--- a/index.html
+++ b/index.html
@@ -83,6 +83,11 @@
             <a href="./unit4game/index.html" target="blank"><img src="thanos.jpg" style="width:30%" onclick="onClick(this)"  alt="Thanos Crsytal Collector"></a>
          <p>Thanos Crystal Game</p>
         </div>
+
+        <div class="col m6 text-center" >
+            <a href="./Trivia-Game/index.html" target="blank"><img src="marvel.jpg" style="width:30%" onclick="onClick(this)"  alt="Thanos Crsytal Collector"></a>
+         <p>Marvel's Trivia Game</p>
+        </div>
       
          <div class="col m6 text-center">
             <a href=" ./assets/index.html " target="blank"><img src="trivia.jpg" style="width:30%" onclick="onClick(this)" class="w3-hover-opacity" alt="Psychic Game"></a>
