--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
         </div>
 
         <div class="col m6 text-center" >
-            <a href="./Trivia-Game/index.html" target="blank"><img src="marvel.jpg" style="width:30%" onclick="onClick(this)"  alt="Thanos Crsytal Collector"></a>
+            <a href="./triviagame/index.html" target="blank"><img src="marvel.jpg" style="width:30%" onclick="onClick(this)"  alt="Thanos Crsytal Collector"></a>
          <p>Marvel's Trivia Game</p>
         </div>
       
