--- a/index.html
+++ b/index.html
@@ -79,17 +79,22 @@
       
         <!-- Responsive Grid. Four columns on tablets, laptops and desktops. Will stack on mobile devices/small screens (100% width) -->
         <div class="row">
-          <div class="col m6 text-center" >
+          <div class="col m3 text-center" >
             <a href="./unit4game/index.html" target="blank"><img src="thanos.jpg" style="width:30%" onclick="onClick(this)"  alt="Thanos Crsytal Collector"></a>
          <p>Thanos Crystal Game</p>
         </div>
 
-        <div class="col m6 text-center" >
+        <div class="col m3 text-center" >
+          <a href="./trainscheduler/index.html" target="blank"><img src="train.jpg" style="width:30%" onclick="onClick(this)"  alt="Thanos Crsytal Collector"></a>
+       <p>Train Scheduler</p>
+      </div>
+
+        <div class="col m3 text-center" >
             <a href="./triviagame/index.html" target="blank"><img src="marvel.jpg" style="width:30%" onclick="onClick(this)"  alt="Thanos Crsytal Collector"></a>
          <p>Marvel's Trivia Game</p>
         </div>
       
-         <div class="col m6 text-center">
+         <div class="col m3 text-center">
             <a href=" ./assets/index.html " target="blank"><img src="trivia.jpg" style="width:30%" onclick="onClick(this)" class="w3-hover-opacity" alt="Psychic Game"></a>
           <p>Psychic Game</p>
             </div>
